@@ -12,8 +12,11 @@ Version 1.6
 
   * Julia (PR#61)
   * Croc (new name for MiniD)
+  * LiveScript (PR#84)
 
 - Fix Template Haskell highlighting (PR#63)
+
+- Fix some S/R lexer errors (PR#91)
 
 
 Version 1.5
